--- a/DiarizeAI-Mobil/src/services/locales/en.json
+++ b/DiarizeAI-Mobil/src/services/locales/en.json
@@ -135,5 +135,15 @@
   "alert_info": "Info",
   "feature_coming_soon": "Feature coming soon!",
   "error_export_failed": "Export failed.",
-  "export_pdf_title": "Share Analysis (PDF)"
+  "export_pdf_title": "Share Analysis (PDF)",
+  
+  "btn_edit_transcript": "Edit Transcript",
+  "btn_save_changes": "Save Changes",
+  "btn_cancel_edit": "Cancel",
+  "alert_reprocess_title": "Re-process?",
+  "alert_reprocess_msg": "You have made changes to the text. Would you like the AI to regenerate the analysis (Summary and Key Points) based on this new text?",
+  "btn_reprocess": "Yes, Re-process",
+  "btn_just_save": "No, Just Save",
+  "alert_reprocess_success": "Analysis updated!",
+  "reprocessing_title": "Re-processing..."
 }
